syntax = "proto3";

import "google/protobuf/empty.proto";

package test;

service TestService {
  rpc Test(TestMessage) returns (OtherMessage);
}

message NestedKey {
  string a = 1;
  string b = 2;
  uint32 c = 3;
  OtherMessage other = 4;
}

message OtherMessage {
  string d = 1;
}

message TestMessage {
  string string = 1;
  bytes bytes = 2;
  uint32 number = 3;
  NestedKey nested_message = 4;
}

// Test for https://github.com/restatedev/restate/issues/682
service Issue682 {
  rpc Issue682(google.protobuf.Empty) returns (google.protobuf.Empty);
}